infra/k8s/calendar-depl.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: calendar-depl
spec:
  replicas: 1
  selector:
    matchLabels:
      app: calendar
  template:
    metadata:
      labels:
        app: calendar
    spec:
      containers:
        - name: calendar
          image: eu.gcr.io/schoolable-platform/calendar
---
apiVersion: v1
kind: Service
metadata:
  name: calendar-srv
spec:
  selector:
    app: calendar
  ports:
    - name: calendar
      protocol: TCP
      port: 3000
      targetPort: 3000
