infra/k8s/calendar-mongo-depl.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: calendar-mongo-depl
spec:
  replicas: 1
  selector:
    matchLabels:
      app: calendar-mongo
  template:
    metadata:
      labels:
        app: calendar-mongo
    spec:
      containers:
        - name: calendar-mongo
          image: mongo
---
apiVersion: v1
kind: Service
metadata:
  name: calendar-mongo-srv
spec:
  selector:
    app: calendar-mongo
  ports:
    - name: db
      protocol: TCP
      port: 27017
      targetPort: 27017
