infra/k8s/groups-depl.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: groups-depl
spec:
  replicas: 1
  selector:
    matchLabels:
      app: groups
  template:
    metadata:
      labels:
        app: groups
    spec:
      containers:
        - name: groups
          image: eu.gcr.io/schoolable-platform/groups
---
apiVersion: v1
kind: Service
metadata:
  name: groups-srv
spec:
  selector:
    app: groups
  ports:
    - name: groups
      protocol: TCP
      port: 3000
      targetPort: 3000
