infra/k8s/modules-depl.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: modules-depl
spec:
  replicas: 1
  selector:
    matchLabels:
      app: modules
  template:
    metadata:
      labels:
        app: modules
    spec:
      containers:
        - name: modules
          image: eu.gcr.io/schoolable-platform/modules
---
apiVersion: v1
kind: Service
metadata:
  name: modules-srv
spec:
  selector:
    app: modules
  ports:
    - name: modules
      protocol: TCP
      port: 3000
      targetPort: 3000
