infra/k8s/modules-mongo-depl.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: modules-mongo-depl
spec:
  replicas: 1
  selector:
    matchLabels:
      app: modules-mongo
  template:
    metadata:
      labels:
        app: modules-mongo
    spec:
      containers:
        - name: modules-mongo
          image: mongo
---
apiVersion: v1
kind: Service
metadata:
  name: modules-mongo-srv
spec:
  selector:
    app: modules-mongo
  ports:
    - name: db
      protocol: TCP
      port: 27017
      targetPort: 27017
