infra/k8s/notifications-redis-depl.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: notifications-redis-depl
spec:
  replicas: 1
  selector:
    matchLabels:
      app: notifications-redis
  template:
    metadata:
      labels:
        app: notifications-redis
    spec:
      containers:
        - name: notifications-redis
          image: redis
---
apiVersion: v1
kind: Service
metadata:
  name: notifications-redis-srv
spec:
  selector:
    app: notifications-redis
  ports:
    - name: db
      protocol: TCP
      port: 6379
      targetPort: 6379
