infra/k8s/phase-items-depl.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: phase-items-depl
spec:
  replicas: 1
  selector:
    matchLabels:
      app: phase-items
  template:
    metadata:
      labels:
        app: phase-items
    spec:
      containers:
        - name: phase-items
          image: eu.gcr.io/schoolable-platform/phase-items
---
apiVersion: v1
kind: Service
metadata:
  name: phase-items-srv
spec:
  selector:
    app: phase-items
  ports:
    - name: phase-items
      protocol: TCP
      port: 3000
      targetPort: 3000
