infra/k8s/phases-depl.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: phases-depl
spec:
  replicas: 1
  selector:
    matchLabels:
      app: phases
  template:
    metadata:
      labels:
        app: phases
    spec:
      containers:
        - name: phases
          image: eu.gcr.io/schoolable-platform/phases
---
apiVersion: v1
kind: Service
metadata:
  name: phases-srv
spec:
  selector:
    app: phases
  ports:
    - name: phases
      protocol: TCP
      port: 3000
      targetPort: 3000
