infra/k8s/removeQueue-depl.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: remove-queue-depl
spec:
  replicas: 1
  selector:
    matchLabels:
      app: remove-queue
  template:
    metadata:
      labels:
        app: remove-queue
    spec:
      containers:
        - name: remove-queue
          image: eu.gcr.io/schoolable-platform/remove-queue
---
apiVersion: v1
kind: Service
metadata:
  name: remove-queue-srv
spec:
  selector:
    app: remove-queue
  ports:
    - name: remove-queue
      protocol: TCP
      port: 3000
      targetPort: 3000
