infra/k8s/removeQueue-redis-depl.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: remove-queue-redis-depl
spec:
  replicas: 1
  selector:
    matchLabels:
      app: remove-queue-redis
  template:
    metadata:
      labels:
        app: remove-queue-redis
    spec:
      containers:
        - name: remove-queue-redis
          image: redis
---
apiVersion: v1
kind: Service
metadata:
  name: remove-queue-redis-srv
spec:
  selector:
    app: remove-queue-redis
  ports:
    - name: db
      protocol: TCP
      port: 6379
      targetPort: 6379
