infra/k8s/session-depl.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: session-depl
spec:
  replicas: 1
  selector:
    matchLabels:
      app: session
  template:
    metadata:
      labels:
        app: session
    spec:
      containers:
        - name: session
          image: eu.gcr.io/schoolable-platform/session
---
apiVersion: v1
kind: Service
metadata:
  name: session-srv
spec:
  selector:
    app: session
  ports:
    - name: session
      protocol: TCP
      port: 3000
      targetPort: 3000
