infra/k8s/submissions-depl.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: submissions-depl
spec:
  replicas: 1
  selector:
    matchLabels:
      app: submissions
  template:
    metadata:
      labels:
        app: submissions
    spec:
      containers:
        - name: submissions
          image: eu.gcr.io/schoolable-platform/submissions
---
apiVersion: v1
kind: Service
metadata:
  name: submissions-srv
spec:
  selector:
    app: submissions
  ports:
    - name: submissions
      protocol: TCP
      port: 3000
      targetPort: 3000
