infra/k8s/ingress-srv.yml
apiVersion: "networking.k8s.io/v1"
kind: Ingress
metadata:
  name: ingress-srv
  annotations:
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/use-regex: "true"
spec:
  rules:
    - host: dev.schoolable.se
      http:
        paths:
          - pathType: Prefix
            path: /api/phase/*
            backend:
              service:
                name: phases-srv
                port:
                  number: 3000
          - pathType: Prefix
            path: /api/course/*
            backend:
              service:
                name: courses-srv
                port:
                  number: 3000
          - pathType: Prefix
            path: /api/auth/*
            backend:
              service:
                name: auth-srv
                port:
                  number: 3000
          - pathType: Prefix
            path: /*
            backend:
              service:
                name: client-srv
                port:
                  number: 3000
